--- a/css/custom.css
+++ b/css/custom.css
@@ -1,43 +1,334 @@
-.chat-online {
-    color: #34ce57
+.border-right {
+    border-right: 1px solid #dee2e6 !important;
+
 }
 
-.chat-offline {
-    color: #e4606d
+.profile-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 40px;
 }
 
-.chat-messages {
+.settings-tray {
+    background: #eee;
+    padding: 10px 15px;
+    /*border-radius: 7px;*/
+}
+
+.settings-tray .no-gutters {
+    padding: 0;
+}
+
+.settings-tray--right {
+    float: right;
+}
+
+.settings-tray--right i {
+    margin-top: 10px;
+    font-size: 25px;
+    color: grey;
+    margin-left: 14px;
+    transition: 0.3s;
+}
+
+.settings-tray--right i:hover {
+    color: #74b9ff;
+    cursor: pointer;
+}
+
+.chat-panel-inner {
+    min-height: 495px;
+    max-height: 495px;
+    overflow-y: scroll;
+}
+
+.search-box {
+    background: #fafafa;
+    padding: 10px 13px;
+}
+
+.search-box .input-wrapper {
     display: flex;
-    flex-direction: column;
-    max-height: 600px;
-    overflow-y: scroll
+    align-items: center;
+    grid-gap: 10px;
+    background: #fff;
+    border-radius: 40px;
 }
 
-.chat-message-left,
-.chat-message-right {
+.search-box .input-wrapper i {
+    color: grey;
+    margin-left: 7px;
+    vertical-align: middle;
+}
+
+.search-box .input-wrapper input {
+    border: none;
+    border-radius: 30px;
+    margin: 0;
+    box-shadow: unset !important;
+}
+
+.search-box .input-wrapper input::placeholder {
+    color: #e3e3e3;
+    font-weight: 300;
+}
+
+.search-box .input-wrapper input:focus, .search-box .input-wrapper input:focus-visible {
+    outline: none !important;
+    box-shadow: unset !important;
+}
+
+.friend-drawer {
+    padding: 10px 15px;
     display: flex;
-    flex-shrink: 0
+    vertical-align: baseline;
+    background: #fff;
+    transition: 0.3s ease;
+    border-top: 1px solid #eeeeee;
 }
 
-.chat-message-left {
-    margin-right: auto
+.friend-drawer--grey {
+    background: #eee;
 }
 
-.chat-message-right {
-    flex-direction: row-reverse;
-    margin-left: auto
+.border-chat {
+    border: 1px solid #EEEEEE;
 }
-.py-3 {
-    padding-top: 1rem!important;
-    padding-bottom: 1rem!important;
+
+.min-h {
+    min-height: 425px;
+    max-height: 425px;
+    overflow-y: scroll;
 }
-.px-4 {
-    padding-right: 1.5rem!important;
-    padding-left: 1.5rem!important;
+
+.friend-drawer .text {
+    margin-left: 12px;
+    width: 70%;
 }
-.flex-grow-0 {
-    flex-grow: 0!important;
+
+.friend-drawer .text h6 {
+    margin-top: 6px;
+    margin-bottom: 0;
 }
-.border-top {
-    border-top: 1px solid #dee2e6!important;
+
+.friend-drawer .text p {
+    margin: 0;
+}
+
+.friend-drawer .time {
+    color: grey;
+}
+
+.friend-drawer--onhover:hover {
+    background: #74b9ff;
+    cursor: pointer;
+}
+
+.friend-drawer--onhover:hover p, .friend-drawer--onhover:hover h6, .friend-drawer--onhover:hover .time {
+    color: #fff !important;
+}
+
+.chat-bubble {
+    padding: 10px 14px;
+    background: #eee;
+    border-radius: 9px;
+    position: relative;
+    animation: fadeIn 1s ease-in;
+}
+
+.chat-bubble:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    width: 0;
+    height: 0;
+    border: 20px solid transparent;
+    border-bottom: 0;
+    margin-top: -10px;
+}
+
+
+.chat-bubble--right {
+    background-color: #74b9ff;
+    padding: 10px;
+    border-radius: 10px;
+    color: #ffffff;
+}
+
+.chat-bubble--right:after {
+    right: 0;
+    border-left-color: #74b9ff;
+    border-right: 0;
+    margin-right: -20px;
+}
+
+.chat-bubble--left {
+    background-color: #eee;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.chat-right {
+    margin: 10px 25px 10px auto;
+    display: flex;
+    justify-content: end;
+}
+
+.chat-bubble--left:after {
+    left: 0;
+    border-right-color: #eee;
+    border-left: 0;
+    margin-left: -20px;
+}
+
+.chat-left {
+    margin: 10px 25px;
+}
+
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+chat-panel-inner .chat-bubble {
+    background: #74b9ff;
+    color: #fff;
+}
+
+.chat-panel-inner .row {
+    margin: 0 auto !important;
+}
+
+.width-50 {
+    width: 45%;
+}
+
+.chat-box-tray {
+    background: #eee;
+    display: flex;
+    align-items: center;
+    padding: 10px 15px;
+    bottom: 0;
+}
+
+.chat-box-tray input {
+    margin: 0 10px;
+    padding: 6px 2px;
+    border: unset !important;
+}
+
+.chat-box-tray input:focus-visible, .chat-box-tray input:focus {
+    outline: unset !important;
+    box-shadow: unset;
+    border: unset !important;
+}
+
+.sl-icon-magnifier:before {
+    content: "\e090";
+}
+
+@media only screen and (max-width: 992px) {
+    .width-50 {
+        width: 90%;
+    }
+}
+
+.companie-logo-slick-carousel .item {
+    padding: 20px !important;
+}
+
+.bg-danger {
+    background-color: red !important;
+}
+.btn-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-gap: 10px;
+}
+.form-Login{
+    background-color: #ffffff;
+    border:1px solid #EEEEEE;
+    border-radius: 10px;
+    padding: 20px;
+}
+.form-Login-row{
+    min-height: calc(100vh - 200px);
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.radio-btn-w{
+    position: relative;
+    display: flex;
+    grid-gap: 10px;
+    align-items: center;
+}
+.radio-btn-wra{
+    display: flex;
+    grid-gap: 1.5rem;
+    align-items: center;
+}
+.radio-btn-w input{
+    margin-bottom: 0 !important;
+}
+.radio-btn-w .label{
+    font-weight: 500;
+}
+.radio-btn-w input[type=radio]:checked+.label:before {
+    content: "\f00c";
+    background-color: #191d56;
+    border: 2px solid #191d56;
+}
+.radio-btn-w .label:before {
+    content: "";
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    margin-right: 10px;
+    position: absolute;
+    left: 0;
+    top: 5px;
+    background-color: #fff;
+    border: 2px solid #d0d0d0;
+    border-radius: 20px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    transition: all 0.25s;
+    font-family: "FontAwesome";
+    font-size: 12px;
+    color: #fff;
+    text-align: center;
+    line-height: 15px;
+    cursor: pointer;
+}
+.link{
+    text-align: end !important;
+    display: block;
+    color: #7a7a7a;
+}
+.link a{
+    color: #7a7a7a;
+}
+.mx-auto{
+    margin: 0 auto;
+    justify-content: center;
+    display: flex;
+}
+.d-flex{
+    display: flex;
+}
+.align-items-center{
+    align-items: center;
+}
+.justify-content-between{
+    justify-content: space-between;
 }
