--- a/css/custom.css
+++ b/css/custom.css
@@ -278,9 +278,12 @@ chat-panel-inner .chat-bubble {
 }
 .radio-btn-w input{
     margin-bottom: 0 !important;
+    display: none;
+
 }
 .radio-btn-w .label{
     font-weight: 500;
+    margin-left: 2.4rem;
 }
 .radio-btn-w input[type=radio]:checked+.label:before {
     content: "\f00c";
@@ -294,7 +297,7 @@ chat-panel-inner .chat-bubble {
     height: 18px;
     margin-right: 10px;
     position: absolute;
-    left: 0;
+    left: 0px;
     top: 5px;
     background-color: #fff;
     border: 2px solid #d0d0d0;
